# decentralized-energy-community

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .tool-versions  Dockerfile  README.md  justfile  package-lock.json  package.json
.github/workflows/: lint.yaml
backend/: contract_interface.py  pyproject.toml
backend/backend/: pyproject.toml
backend/backend/src/: main.py
backend/data/: Verbruikshistoriek_elektriciteit_20220704_20240713_dagtotalen.csv  Verbruikshistoriek_elektriciteit_20230107_20240707_dagtotalen.csv  Verbruikshistoriek_elektriciteit_20240517_20240712_kwartiertotalen.csv  Verbruikshistoriek_elektriciteit_20240624_20240709_dagtotalen.csv  Verbruikshistoriek_elektriciteit_20240707_20240708_kwartiertotalen.csv  Verbruikshistoriek_elektriciteit_20240707_20240709_kwartiertotalen.csv  Verbruikshistoriek_elektriciteit_20240708_20240712_kwartiertotalen.csv  Verbruikshistoriek_elektriciteit_20240709_20240713_kwartiertotalen.csv  Verbruikshistoriek_elektriciteit_541448820060527996_20240517_20240712_kwartiertotalen.csv  Verbruikshistoriek_elektriciteit_541448820072026166_20230107_20240707_dagtotalen.csv  Verbruikshistoriek_elektriciteit_541448820072026166_20240707_20240708_kwartiertotalen.csv  Verbruikshistoriek_elektriciteit_541448820072026166_20240707_20240709_kwartiertotalen.csv  Verbruikshistoriek_elektriciteit_541448860010420847_20220704_20240713_dagtotalen.csv  Verbruikshistoriek_elektriciteit_541448860010420847_20240708_20240709_kwartiertotalen.csv  Verbruikshistoriek_elektriciteit_541448860010420847_20240708_20240712_kwartiertotalen.csv  (+2 more)
(+22 files in other folders)
