[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
pandas = "2.2.2"
unicorn = {extras = ["standard"], version = "^2.0.1.post1"}

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-mock = "*"

[tool.poetry.group.dev.dependencies]
black = "24.4.2"
mypy = "1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']


[mypy]
python_version = '3.11'
plugins = 'mypy_plugins/check_mypy_version.py, numpy.typing.mypy_plugin'

cache_dir = '.mypy_cache/strict'
allow_redefinition = true
strict_optional = true
show_error_codes = true
show_column_numbers = true
warn_no_return = true
disallow_any_unimported = true

strict = true
implicit_reexport = false

# do not reenable this:
# https://github.com/pytorch/pytorch/pull/60006#issuecomment-866130657
warn_unused_ignores = false

module = 'src'

[virtualenvs]
in-project = true